src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

.wrapper {
  background-color: #dcecef;
  min-height: 1000px;
}

.container {
  margin: 10px auto;
}

.container-item__title {
  text-align: center;
  margin: 10px auto;
}

.item-center.card-body {
  margin: 85px auto;
}

.content {
  margin: 0 auto;
  width: 90%;
  height: 500px;
  background-color: white;
}

.infor-weather__detail {
  margin-top: 40px;
}

